Modificando o style.css

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 /* Cores e variáveis */
 :root {
   --primary: #3b82f6;
-  --primary-dark: #2563eb;
+  --primary-dark: #2deb46;
   --bg: #f9f9f9;
   --text: #333;
   --white: #ffffff;
